@@ -1,13 +1,28 @@
 package uk.gov.justice.laa.portal.landingpage.controller;
 
-import jakarta.servlet.http.HttpSession;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Set;
+import java.util.UUID;
+
+import static org.hamcrest.Matchers.hasProperty;
+import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Import;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.model;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
 import org.springframework.transaction.annotation.Transactional;
+
+import jakarta.servlet.http.HttpSession;
 import uk.gov.justice.laa.portal.landingpage.config.TestSecurityConfig;
 import uk.gov.justice.laa.portal.landingpage.entity.App;
 import uk.gov.justice.laa.portal.landingpage.entity.AppRole;
@@ -18,22 +33,6 @@ import uk.gov.justice.laa.portal.landingpage.repository.AppRepository;
 import uk.gov.justice.laa.portal.landingpage.repository.AppRoleRepository;
 import uk.gov.justice.laa.portal.landingpage.repository.EntraUserRepository;
 import uk.gov.justice.laa.portal.landingpage.repository.UserProfileRepository;
-
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Set;
-import java.util.UUID;
-
-import static org.hamcrest.Matchers.hasProperty;
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.model;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
 
 @Import(TestSecurityConfig.class)
 public class AppSelectionTest extends BaseIntegrationTest {
@@ -71,11 +70,8 @@ public class AppSelectionTest extends BaseIntegrationTest {
                 .andExpect(status().isOk())
                 .andExpect(view().name("edit-user-apps"))
                 .andExpect(model().attributeExists("user"))
-                .andExpect(model().attributeExists("userAssignedApps"))
-                .andExpect(model().attributeExists("availableApps"))
-                .andExpect(model().attribute("user", hasProperty("id", is(entraUser.getId().toString()))))
-                .andExpect(model().attribute("userAssignedApps", hasSize(1)))
-                .andExpect(model().attribute("availableApps", hasSize(1)));
+                .andExpect(model().attributeExists("apps"))
+                .andExpect(model().attribute("user", hasProperty("id", is(entraUser.getId().toString()))));
     }
 
     @Test
@@ -92,16 +88,17 @@ public class AppSelectionTest extends BaseIntegrationTest {
         String path = String.format("/admin/users/edit/%s/apps", userId);
         String[] selectedApps = { userId.toString() };
         MvcResult result = mockMvc.perform(MockMvcRequestBuilders.post(path)
-                .param("selectedApps", selectedApps))
+                .param("apps", selectedApps))
                 .andExpect(status().is3xxRedirection())
                 .andReturn();
         assertNotNull(result.getResponse().getRedirectedUrl());
         assertEquals(result.getResponse().getRedirectedUrl(), String.format("/admin/users/edit/%s/roles", userId));
         HttpSession session = result.getRequest().getSession();
         assertNotNull(session.getAttribute("selectedApps"));
+        @SuppressWarnings("unchecked")
         List<String> returnedSelectApps = (List<String>) session.getAttribute("selectedApps");
         assertEquals(1, returnedSelectApps.size());
-        assertEquals(selectedApps[0], returnedSelectApps.getFirst());
+        assertEquals(selectedApps[0], returnedSelectApps.get(0));
     }
 
     private EntraUser buildTestUser() {
@@ -111,7 +108,7 @@ public class AppSelectionTest extends BaseIntegrationTest {
         AppRole appRole = buildLaaAppRole(app, "Test App Role");
         appRole = appRoleRepository.saveAndFlush(appRole);
         EntraUser entraUser = buildEntraUser(generateEntraId(), "test@test.com", "Test", "User");
-        UserProfile userProfile = buildLaaUserProfile(entraUser, UserType.INTERNAL);
+        UserProfile userProfile = buildLaaUserProfile(entraUser, UserType.INTERNAL, true);
         userProfile.setAppRoles(Set.of(appRole));
         entraUser.setUserProfiles(Set.of(userProfile));
         return entraUser;
